Tue Oct 30 13:58:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/ClassPathEntityResolver.java (resolveEntity):
	Replace getSystemResourceAsStream by getResourceAsStream, the former
	confuses groovy and netbeans class loaders.
	* src/org/jcae/mesh/amibe/validation/QualityFloat.java (split): New
	split() signature with a list of float arguments to have a finer
	control on quality bounds.
	* src/org/jcae/mesh/amibe/patch/ElementPatchFactory.java
	  src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java
	  src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java
	  src/org/jcae/mesh/amibe/ds/TriangleHE.java
	  src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java: Use Java
	1.5 ability to override return types.
	* src/org/jcae/mesh/xmldata/XMLHelper.java (parseXMLString): Throws
	ParserConfigurationException, SAXException, IOException.
	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject, readObject3D):
	Throws IOException.
	* src/org/jcae/mesh/xmldata/XMLHelper.java (parseXML): Do not throw
	TransformerConfigurationException and TransformerException, but
	transform these exceptions into IOException.
	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject, writeObject3D):
	Throws IOException.

Thu Oct 25 15:51:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/traits/TraitsBuilder.java: Create a Traits
	instance only if it is needed.

Wed Oct 24 00:38:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: File removed,
	adjacency relations can be managed without this interface.

Mon Oct 22 10:20:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: Rename setFlag(),
	clearFlag() and hasFlag() methods into setAttributes(),
	clearAttributes() and hasAttributes().