@@ -1,3 +1,8 @@
+Wed Oct 31 15:13:39 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObjectGroups): Sort
+	groups according to their identifier.
+
 Tue Oct 30 13:58:05 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/xmldata/ClassPathEntityResolver.java (resolveEntity):
